# mcp-trello

./: README.md  pyproject.toml
dxt/: build_dxt.py  manifest.json
src/mcp_trello/: __init__.py  main.py
