[project]
name = "mcp-trello"
version = "0.1.0"
description = "MCP extension for Trello"
dependencies = [
    "mcp>=1.0.0",
    "py-trello>=0.19.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "mcp-cli>=0.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
